More lawyers added

--- a/index.html
+++ b/index.html
@@ -82,7 +82,18 @@
                     <option data-src="Forster.png">Forster</option>
                     <option data-src="Gardiner.png">Gardiner</option>
                     <option data-src="Garner.png">Garner</option>
-                    <option data-src="Jordan.png">Jordan</option>                                        
+                    <option data-src="Gavin.png">Gavin</option>
+                    <option data-src="Goldsworthy.png">Goldsworthy</option>
+                    <option data-src="Groarke.png">Groarke</option>
+                    <option data-src="Hayes(Glenn).png">Hayes(Glenn)</option>
+                    <option data-src="Hayes(Sinead).png">Hayes(Sinead)</option>
+                    <option data-src="Hicks.png">Hicks</option>
+                    <option data-src="Hutchinson.png">Hutchinson</option>
+                    <option data-src="Ince.png">Ince</option>
+                    <option data-src="Irwin.png">Irwin</option>
+                    <option data-src="Jatinder.png">Jatinder</option>
+                    <option data-src="Jordan.png">Jordan</option>
+                    <option data-src="Wealleans.png">Wealleans</option>
                 </select>  
                 <button class="add-lawyer">Add Lawyer</button>
             </div>         
