Text light mode added

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <title></title>
+    <title>The Quote Machine</title>
     <script src="js/jquery-1.11.3.min.js"></script>
     <script src="js/textOnImage.js"></script>
     <script src="js/jscolor.min.js"></script>
@@ -22,7 +22,13 @@
             <div class="control-component">
                 Background Color: <input class="jscolor color-picker" value="6c7792">
                 <button class="pls-grad fa fa-adjust"> PLS</button>
-                
+            </div>
+
+            <div class="control-component">
+                Text Color:
+                <br>
+                <button class="light-text fa fa-adjust"> Light</button>
+                <button class="dark-text fa fa-adjust"> Dark</button>
             </div>
             
             <div class="control-component">
