added title resizing

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </div>
             
             <div class="control-component">
-                <label name="title" style="font-family:albert-reg;">Title</label>
+                <label name="title">Title</label>
                 <br>
                 <input type="text" class="title-input" name="title"/>
                 <br>
@@ -40,6 +40,8 @@
                 <button class="down-title fa fa-angle-down"></button>
                 <button class="widen-title">Widen</button>
                 <button class="shorten-title">Shorten</button>
+                <button class="bigger-title">+</button>
+                <button class="smaller-title">-</button>
                 <!--<button class="right-title fa fa-angle-right"></button>
                 <button class="left-title fa fa-angle-left"></button>-->
             </div>
@@ -109,7 +111,7 @@
             </div>-->
 
             <div class="control-component">
-                <a id="download">Download my Graphic</a>
+                <a id="download" style="font-family:albert-reg;">Download my Graphic</a>
             </div>
             
 
