Added more lawyers

--- a/index.html
+++ b/index.html
@@ -100,7 +100,15 @@
                     <option data-src="Ince.png">Ince</option>
                     <option data-src="Irwin.png">Irwin</option>
                     <option data-src="Jatinder.png">Jatinder</option>
+                    <option data-src="Jewitt.png">Jewitt</option>
                     <option data-src="Jordan.png">Jordan</option>
+                    <option data-src="Lewis.png">Lewis</option>
+                    <option data-src="Lomas.png">Lomas</option>
+                    <option data-src="Luckman.png">Luckman</option>
+                    <option data-src="Mahapatra.png">Mahapatra</option>
+                    <option data-src="Morris.png">Morris</option>
+                    <option data-src="Mullins.png">Mullins</option>
+                    <option data-src="Palmer-Hughes.png">Palmer-Hughes</option>
                     <option data-src="Wealleans.png">Wealleans</option>
                 </select>  
                 <button class="add-lawyer">Add Lawyer</button>
