new pls and bls gradient, logo colour changer, simplified and improved lawyer picker

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <div class="control-component">
                 Background Color: <input class="jscolor color-picker" value="6c7792">
                 <button class="pls-grad fa fa-adjust"> PLS</button>
+                <button class="bls-grad fa fa-adjust"> BLS</button>
             </div>
 
             <div class="control-component">
@@ -85,6 +86,8 @@
                     <option data-src="Crowther.png">Crowther</option>
                     <option data-src="Davis.png">Davis</option>
                     <option data-src="Dowling.png">Dowling</option>
+                    <option data-src="Downing.png">Downing</option>
+                    <option data-src="Dhillon.png">Dhillon</option>
                     <option data-src="Ettinger.png">Ettinger</option>
                     <option data-src="Firth.png">Firth</option>
                     <option data-src="Forster.png">Forster</option>
@@ -102,6 +105,7 @@
                     <option data-src="Jatinder.png">Jatinder</option>
                     <option data-src="Jewitt.png">Jewitt</option>
                     <option data-src="Jordan.png">Jordan</option>
+                    <option data-src="Kirtley.png">Kirtley</option>
                     <option data-src="Lewis.png">Lewis</option>
                     <option data-src="Lomas.png">Lomas</option>
                     <option data-src="Luckman.png">Luckman</option>
@@ -109,9 +113,9 @@
                     <option data-src="Morris.png">Morris</option>
                     <option data-src="Mullins.png">Mullins</option>
                     <option data-src="Palmer-Hughes.png">Palmer-Hughes</option>
+                    <option data-src="Tucker.png">Tucker</option>
                     <option data-src="Wealleans.png">Wealleans</option>
                 </select>  
-                <button class="add-lawyer">Add Lawyer</button>
             </div>         
 
             <!--<div class="control-component">
