prelim work on image loader

--- a/index.html
+++ b/index.html
@@ -118,9 +118,7 @@
                 </select>  
             </div>         
 
-            <!--<div class="control-component">
-                <button class="add-text">Make my Graphic</button>
-            </div>-->
+            <input type="file" id="imageLoader"" name="imageLoader"/>
 
             <div class="control-component">
                 <a id="download" style="font-family:albert-reg;">Download my Graphic</a>
