custom image can now be drawn to canvas

--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
             <div class="control-component">
                 <label name="lawyer" class="add-lawyer-label">Lawyer</label>
                 <select type="text" class="lawyer-select" name="lawyer"> 
+                    <option data-src="">No lawyer</option>
                     <option data-src="Annett.png">Annett</option>
                     <option data-src="Arrowsmith.png">Arrowsmith</option>
                     <option data-src="Ayre.png">Ayre</option> 
@@ -118,7 +119,7 @@
                 </select>  
             </div>         
 
-            <input type="file" id="imageLoader"" name="imageLoader"/>
+            <input type="file" id="imageLoader" name="imageLoader"/>
 
             <div class="control-component">
                 <a id="download" style="font-family:albert-reg;">Download my Graphic</a>
