added optional quote mode

--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
             </div>
             
             <div class="control-component">
+                <button class="js-quote-mode">Quote Mode</button>
+                <br>
+                <br>
                 <label name="title">Title</label>
                 <br>
                 <input type="text" class="title-input" name="title"/>
